# rp2040-3d-engine

./: 3d-renderer.cpp  CMakeLists.txt  Defines.h  Engine.h  ILI9341.cpp  ILI9341.h  README.md  pico_sdk_import.cmake
display/: font.h
engine/: Buffer.h  Camera.cpp  Camera.h  Color.cpp  Color.h  FixedPoint.h  Matrix.h  Matrix4.cpp  Matrix4.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Pivot.h  Render.cpp  Render.h  Renderer.cpp  Renderer.h  Scene.h  Transform.h  Vector.cpp  Vector.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vertex.h
